--- a/calender/style.css
+++ b/calender/style.css
@@ -6,10 +6,10 @@ body {
     margin: 0;
 }
 
-.calendar {
+/* .calendar {
     width: 300px;
     text-align: center;
-}
+} */
 
 .header {
     display: flex;
